k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: simple-rest-go
  labels:
    app: simple-rest-go
    app.kubernetes.io/component: simple-rest-go
    app.kubernetes.io/instance: simple-rest-go
    app.kubernetes.io/name: simple-rest-go
    app.kubernetes.io/part-of: simple-rest-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-rest-go
  template:
    metadata:
      labels:
        app: simple-rest-go
        deployment: simple-rest-go
    spec:
      containers:
        - name: simple-rest-go
          image: 'quay.io/voravitl/simple-rest-go:go-latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
